--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <input type="text" name="" id="" placeholder="example@gmail.com">
             <input type="text" name="" id="" placeholder="full name">
             <textarea name="" id="" cols="30" rows="20" placeholder="Message"></textarea>
-            <button>Get in Touch</button>
+            <button class="touch">Get in Touch</button>
 
         </form>
 
